# Tomato

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  format.yml  linter.yml  release.yml  rust.yml
src/: cli.rs  json_serializable.rs  main.rs  menu.rs  migration.rs  notify.rs  session.rs  settings.rs  sound.rs  storage.rs  timers.rs  ui.rs
