[package]
name = "rustPomodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17"
rodio = "0.20.1"
crossterm = "0.26"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
home = "0.5.11"
clap = { version = "4.5.20", features = ["derive"]}
notify-rust = "4"


[profile.test]
opt-level = 0